Mise en place js/Pour j'aime

--- a/damier.html
+++ b/damier.html
@@ -8,119 +8,147 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="h-screen">
+<body class="h-screen bg-sky-300">
     <div>
-        <h1 class="text-4xl strong font-bold text-center mb-14">Liste des séries TV</h1>
+        <h1 class="text-4xl strong font-bold text-center ">Liste des séries TV</h1>
+        <br>
+        <br>
     </div>
 
     <section class="flex flex-col items-center lg:justify-center lg:grid lg:grid-cols-3 m-auto content-center">
 
-        <div class="mb-2">
-            <div class="border-2 border-gray-300 px-5 m-auto w-80 shadow-xl">
-                <div class="flex justify-center">
-                    <img src="img/boardwalk_empire.jpg" alt="" class="w-52 h-80">
+        <div class="mb-2 rounded-lg">
+            <div class="px-5 m-auto w-80 shadow-xl rounded-lg bg-white">
+                <div class="flex justify-center ">
+                    <img src="img/boardwalk_empire.jpg" alt="" class="w-52 h-80 ">
                 </div>
                 <p>2001: BoardWalk Empire</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda libero maiores, iusto aperiam cupiditate recusandae?</p>
                 <br>
-                <p href="" class="pb-5"><a href="">Lire plus...</a></p>
+                <div class="flex justify-center pb-2">
+                    <img src="img/miniature_unlike.png" alt="" class="imgSeries w-10 m-2">
+                    <button name="jaime" class="m-2">J'aime</button>
+                </div>
             </div>
         </div>
 
-        <div class="mb-2">
-            <div class="border-2 border-gray-300 px-5 m-auto w-80 shadow-xl">
+        <div class="mb-2 rounded-lg">
+            <div class="px-5 m-auto w-80 shadow-xl rounded-lg bg-white">
                 <div class="flex justify-center">
                     <img src="img/entourage.jpg" alt="" class="w-52 h-80">
                 </div>
                 <p class="mx-3">2004: Entourage</p>
                 <p class="mx-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda libero maiores, iusto aperiam cupiditate recusandae?</p>
                 <br>
-                <p href="" class="pb-5"><a href="">Lire plus...</a></p>
+                <div class="flex justify-center pb-2">
+                    <img src="img/miniature_unlike.png" alt="" class="imgSeries w-10 m-2">
+                    <button name="jaime" class="m-2">J'aime</button>
+                </div>
             </div>
         </div>
-
         
-        <div class="mb-2">
-            <div class="border-2 border-gray-300 px-5 m-auto w-80 shadow-xl">
+        <div class="mb-2 rounded-lg">
+            <div class="px-5 m-auto w-80 shadow-xl rounded-lg bg-white">
                 <div class="flex justify-center">
                     <img src="img/dexter.jpg" alt="" class="w-52 h-80">
                 </div>
                 <p class="mx-3">2006: Dexter</p>
                 <p class="mx-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda libero maiores, iusto aperiam cupiditate recusandae?</p>
                 <br>
-                <p href="" class="pb-5"><a href="">Lire plus...</a></p>
+                <div class="flex justify-center pb-2">
+                    <img src="img/miniature_unlike.png" alt="" class="imgSeries w-10 m-2">
+                    <button name="jaime" class="m-2">J'aime</button>
+                </div>
             </div>
         </div>
 
-        <div class="mb-2">
-            <div class="border-2 border-gray-300 px-5 m-auto w-80 shadow-xl">
+        <div class="mb-2 rounded-lg">
+            <div class="px-5 m-auto w-80 shadow-xl rounded-lg bg-white">
                 <div class="flex justify-center">
                     <img src="img/dopesick.webp" alt="" class="w-52 h-80">
                 </div>
                 <p class="mx-3">2021: Dopesick</p>
                 <p class="mx-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda libero maiores, iusto aperiam cupiditate recusandae?</p>
                 <br>
-                <p href="" class="pb-5"><a href="">Lire plus...</a></p>
+                <div class="flex justify-center pb-2">
+                    <img src="img/miniature_unlike.png" alt="" class="imgSeries w-10 m-2">
+                    <button name="jaime" class="m-2">J'aime</button>
+                </div>
             </div>
         </div>
 
-        <div class="mb-2">
-            <div class="border-2 border-gray-300 px-5 m-auto w-80 shadow-xl">
+        <div class="mb-2 rounded-lg">
+            <div class="px-5 m-auto w-80 shadow-xl rounded-lg bg-white">
                 <div class="flex justify-center">
                     <img src="img/engrenages.webp" alt="" class="w-52 h-80">
                 </div>
                 <p class="mx-3">2005: Engrenages</p>
                 <p class="mx-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda libero maiores, iusto aperiam cupiditate recusandae?</p>
                 <br>
-                <p href="" class="pb-5"><a href="">Lire plus...</a></p>
+                <div class="flex justify-center pb-2">
+                    <img src="img/miniature_unlike.png" alt="" class="imgSeries w-10 m-2">
+                    <button name="jaime" class="m-2">J'aime</button>
+                </div>
             </div>
         </div>
 
-        <div class="mb-2">
-            <div class="border-2 border-gray-300 px-5 m-auto w-80 shadow-xl">
+        <div class="mb-2 rounded-lg">
+            <div class="px-5 m-auto w-80 shadow-xl rounded-lg bg-white">
                 <div class="flex justify-center">
                     <img src="img/freres_d_armes.jpg" alt="" class="w-52 h-80">
                 </div>
                 <p class="mx-3">2001: Frères d'armes</p>
                 <p class="mx-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda libero maiores, iusto aperiam cupiditate recusandae?</p>
                 <br>
-                <p href="" class="pb-5"><a href="">Lire plus...</a></p>
+                <div class="flex justify-center pb-2">
+                    <img src="img/miniature_unlike.png" alt="" class="imgSeries w-10 m-2">
+                    <button name="jaime" class="m-2">J'aime</button>
+                </div>
             </div>
         </div>
 
-        <div class="mb-2">
-            <div class="border-2 border-gray-300 px-5 m-auto w-80 shadow-xl">
+        <div class="mb-2 rounded-lg">
+            <div class="px-5 m-auto w-80 shadow-xl rounded-lg bg-white">
                 <div class="flex justify-center">
                     <img src="img/game_of_thrones.webp" alt="" class="w-52 h-80">
                 </div>
                 <p class="mx-3">2011: Game of Thrones</p>
                 <p class="mx-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda libero maiores, iusto aperiam cupiditate recusandae?</p>
                 <br>
-                <p href="" class="pb-5"><a href="">Lire plus...</a></p>
+                <div class="flex justify-center pb-2">
+                    <img src="img/miniature_unlike.png" alt="" class="imgSeries w-10 m-2">
+                    <button name="jaime" class="m-2">J'aime</button>
+                </div>
             </div>
         </div>
 
-        <div class="mb-2">
-            <div class="border-2 border-gray-300 px-5 m-auto w-80 shadow-xl">
+        <div class="mb-2 rounded-lg">
+            <div class="px-5 m-auto w-80 shadow-xl rounded-lg bg-white">
                 <div class="flex justify-center">
                     <img src="img/homeland.webp" alt="" class="w-52 h-80">
                 </div>
                 <p class="mx-3">2011: homeland</p>
                 <p class="mx-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda libero maiores, iusto aperiam cupiditate recusandae?</p>
                 <br>
-                <p href="" class="pb-5"><a href="">Lire plus...</a></p>
+                <div class="flex justify-center pb-2">
+                    <img src="img/miniature_unlike.png" alt="" class="imgSeries w-10 m-2">
+                    <button name="jaime" class="m-2">J'aime</button>
+                </div>
             </div>
         </div>
 
-        <div class="mb-2">
-            <div class="border-2 border-gray-300 px-5 m-auto w-80 shadow-xl">
+        <div class="mb-2 rounded-lg">
+            <div class="px-5 m-auto w-80 shadow-xl rounded-lg bg-white">
                 <div class="flex justify-center">
                     <img src="img/mon_oncle_charlie.webp" alt="" class="w-52 h-80">
                 </div>
                 <p>2003: Mon Oncle Charlie</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda libero maiores, iusto aperiam cupiditate recusandae?</p>
                 <br>
-                <p href="" class="pb-5"><a href="">Lire plus...</a></p>
+                <div class="flex justify-center pb-2">
+                    <img src="img/miniature_unlike.png" alt="" class="imgSeries w-10 m-2">
+                    <button name="jaime" class="m-2">J'aime</button>
+                </div>
             </div>
         </div>
     </section>
